test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/incomplete_types/subscript_void_pointer_conditional.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[47]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(arr)
  [
  const int(3)
  ]
  =
  {
  const int(1)
  ,
  const int(2)
  ,
  const int(3)
  }
  ;
  void
  *
  identifier(void_ptr)
  =
  identifier(arr)
  ;
  int
  *
  identifier(int_ptr)
  =
  identifier(arr)
  +
  const int(1)
  ;
  return
  (
  const int(1)
  ?
  identifier(int_ptr)
  :
  identifier(void_ptr)
  )
  [
  const int(1)
  ]
  ;
  }
